# Mini_DCS

./: .gitignore
MiniCache/client/: socketTool.h
MiniCache/master/: README.txt
MiniCache/master/src/: manager.cpp  netServer.h
Mini_DCS/cache_server/src/: threadPoll.h
Mini_DCS/master/common/: connection.h  request.h
Mini_DCS/master/src/: nodeConHash.cpp
Mini_DCS/master/test/: client  test_client.cpp
cache_server/: cacheServer  main.cpp
cache_server/src/: config.h  heart_beat.cpp  heart_beat.h  lru.h  manager.cpp  manager.h  myEpoll.h  netServer.h
master/: CMakeLists.txt  README.txt  main.cpp
master/common/: buffer.cpp  connection.cpp  connection.h  consistentHash.h  epoll.h  log.h  request.cpp  request.h  response.cpp  response.h  safeQueue.h  task.h  threadPool.cpp  timer.cpp
master/src/: manager.cpp  manager.h  netServer.cpp  netServer.h  nodeConHash.cpp  nodeConHash.h
master/test/: client  conff  consistent  epoll  log  test_client.cpp  test_epoll.cpp  test_safeQueue.cpp  test_threadPool.cpp
